jobber-k8s/minikube/1-gateway/gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jobber-gateway
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jobber-gateway
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25% 
      maxSurge: 25%
  template:
    metadata:
      labels:
        app: jobber-gateway
    spec:
      containers:
      - name: jobber-gateway
        image: uzochukwueddie/jobber-gateway:stable
        imagePullPolicy: Always
        resources:
          limits:
            cpu: '0.5'
            memory: 1Gi
          requests:
            cpu: 100m
            memory: 150Mi
        ports:
        - name: gateway
          containerPort: 4000
